{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 196,
  "lineage": "c09aec79-145f-3a23-b822-af413be7f910",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "POC-Standalone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc8883cbe9d895c8",
            "arn": "arn:aws:ec2:us-east-1:941072507125:instance/i-0f598ee61491ccfd0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "POC-Allow-SSM",
            "id": "i-0f598ee61491ccfd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newbie",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027baa203f8c59ce3",
            "private_dns": "ip-10-1-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.128",
            "public_dns": "ec2-52-201-229-194.compute-1.amazonaws.com",
            "public_ip": "52.201.229.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09482d53a5d6a9a27",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f59190dec34a83cc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b165a85b9d31b79",
            "tags": {
              "Name": "POC-Standalone"
            },
            "tags_all": {
              "Name": "POC-Standalone"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f59190dec34a83cc"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.POCallowSSM-Profile",
            "aws_iam_role.POCallowSSM",
            "aws_security_group.standalone",
            "aws_subnet.POC-Subnet-2",
            "aws_vpc.POC",
            "data.aws_ami.RHEL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "POC-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:internet-gateway/igw-037d96ec922abfacd",
            "id": "igw-037d96ec922abfacd",
            "owner_id": "941072507125",
            "tags": {
              "Name": "POC-IGW"
            },
            "tags_all": {
              "Name": "POC-IGW"
            },
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "POC-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941072507125:loadbalancer/app/POC-ALB/56a0adac6bf7263c",
            "arn_suffix": "app/POC-ALB/56a0adac6bf7263c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-POC-ALB-1915737155.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:941072507125:loadbalancer/app/POC-ALB/56a0adac6bf7263c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "POC-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a99cb85f3b0bb86d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a93c39ef1670577"
              },
              {
                "subnet_id": "subnet-0ea289a5ecd113694"
              }
            ],
            "subnets": [
              "subnet-04a93c39ef1670577",
              "subnet-0ea289a5ecd113694"
            ],
            "vpc_id": "vpc-0b5a8787dab3650d1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.POC-ALB-SG",
            "aws_subnet.POC-Subnet-3",
            "aws_subnet.POC-Subnet-4",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "POC-ALB-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941072507125:listener/app/POC-ALB/56a0adac6bf7263c/172a0bee02cfefdc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:941072507125:targetgroup/POC-ALB-TG/5a6560d7222efe92",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941072507125:listener/app/POC-ALB/56a0adac6bf7263c/172a0bee02cfefdc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:941072507125:loadbalancer/app/POC-ALB/56a0adac6bf7263c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.POC-ALB",
            "aws_lb_target_group.POC-ALB-TG",
            "aws_security_group.POC-ALB-SG",
            "aws_subnet.POC-Subnet-3",
            "aws_subnet.POC-Subnet-4",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "POC-ALB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941072507125:targetgroup/POC-ALB-TG/5a6560d7222efe92",
            "arn_suffix": "targetgroup/POC-ALB-TG/5a6560d7222efe92",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941072507125:targetgroup/POC-ALB-TG/5a6560d7222efe92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:941072507125:loadbalancer/app/POC-ALB/56a0adac6bf7263c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "POC-ALB-TG",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "POC-Private-Subs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:route-table/rtb-0947839eb4960001d",
            "id": "rtb-0947839eb4960001d",
            "owner_id": "941072507125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "POC-Public-Subs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:route-table/rtb-0bdfaf76b06698377",
            "id": "rtb-0bdfaf76b06698377",
            "owner_id": "941072507125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037d96ec922abfacd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.POC-IGW",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "POC-Private-Sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9a5183f6091ce55",
            "route_table_id": "rtb-0947839eb4960001d",
            "subnet_id": "subnet-04a93c39ef1670577"
          },
          "dependencies": [
            "aws_route_table.POC-Private-Subs",
            "aws_subnet.POC-Subnet-3",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "POC-Private-Sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015105bc0a3f3829e",
            "route_table_id": "rtb-0947839eb4960001d",
            "subnet_id": "subnet-0ea289a5ecd113694"
          },
          "dependencies": [
            "aws_route_table.POC-Private-Subs",
            "aws_subnet.POC-Subnet-4",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "POC-Public-Sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679bfeee8d59e0b1",
            "route_table_id": "rtb-0bdfaf76b06698377",
            "subnet_id": "subnet-0973786261bc25fbd"
          },
          "dependencies": [
            "aws_internet_gateway.POC-IGW",
            "aws_route_table.POC-Public-Subs",
            "aws_subnet.POC-Subnet-1",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "POC-Public-Sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029bda49a4c5abdfe",
            "route_table_id": "rtb-0bdfaf76b06698377",
            "subnet_id": "subnet-05b165a85b9d31b79"
          },
          "dependencies": [
            "aws_internet_gateway.POC-IGW",
            "aws_route_table.POC-Public-Subs",
            "aws_subnet.POC-Subnet-2",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "POC-ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:security-group/sg-0a99cb85f3b0bb86d",
            "description": "Allow HTTP traffic for Load Balancer",
            "egress": [],
            "id": "sg-0a99cb85f3b0bb86d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "POC-ALB-SG",
            "name_prefix": "",
            "owner_id": "941072507125",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "standalone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:security-group/sg-0f59190dec34a83cc",
            "description": "Allow basic traffic for standalone",
            "egress": [],
            "id": "sg-0f59190dec34a83cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "POC-standalone-SG",
            "name_prefix": "",
            "owner_id": "941072507125",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "POC-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:subnet/subnet-0973786261bc25fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0973786261bc25fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941072507125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-Subnet-1"
            },
            "tags_all": {
              "Name": "POC-Subnet-1"
            },
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "POC-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:subnet/subnet-05b165a85b9d31b79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b165a85b9d31b79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941072507125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-Subnet-2"
            },
            "tags_all": {
              "Name": "POC-Subnet-2"
            },
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "POC-Subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:subnet/subnet-04a93c39ef1670577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a93c39ef1670577",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941072507125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-Subnet-3"
            },
            "tags_all": {
              "Name": "POC-Subnet-3"
            },
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "POC-Subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:subnet/subnet-0ea289a5ecd113694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea289a5ecd113694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941072507125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-Subnet-4"
            },
            "tags_all": {
              "Name": "POC-Subnet-4"
            },
            "vpc_id": "vpc-0b5a8787dab3650d1"
          },
          "dependencies": [
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "POC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:vpc/vpc-0b5a8787dab3650d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01865a321191925f6",
            "default_route_table_id": "rtb-014152d5676e6edce",
            "default_security_group_id": "sg-04be7d77ccf1d377b",
            "dhcp_options_id": "dopt-086cb409e12b4b8ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5a8787dab3650d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014152d5676e6edce",
            "owner_id": "941072507125",
            "tags": {
              "Name": "POC-VPC"
            },
            "tags_all": {
              "Name": "POC-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ALB-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:security-group-rule/sgr-055055ec0e8762516",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-055055ec0e8762516",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a99cb85f3b0bb86d",
            "security_group_rule_id": "sgr-055055ec0e8762516",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.POC-ALB-SG",
            "aws_vpc.POC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "standalone-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941072507125:security-group-rule/sgr-0075e06e9104cb2c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0075e06e9104cb2c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f59190dec34a83cc",
            "security_group_rule_id": "sgr-0075e06e9104cb2c4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.standalone",
            "aws_vpc.POC"
          ]
        }
      ]
    }
  ]
}